--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.http.multipart.max-file-size=50MB
 spring.http.multipart.max-request-size=50MB
+spring.datasource.hikari.auto-commit=false
 
